# sparcOS-rag

./: .env.example  .gitignore  README.md  bench_embedder_isolation.py  bench_qmd_vs_sparcos.py  bench_results.json  build_goldset.py  docker-compose.yml  measure_rerank.py  pyproject.toml
docs/superpowers/plans/: 2026-07-23-index-hygiene.md
docs/superpowers/specs/: 2026-07-23-index-hygiene-design.md
eval/: questions.yaml  questions_neutral.yaml
scripts/: install-schedule.ps1  reindex.ps1
sparcos_rag/: _qwen_reranker.py  answerer.py  chunker.py  cli.py  config.py  embedder.py  eval.py  indexer.py  loader.py  mcp_server.py  reranker.py  retriever.py  store.py
tests/: conftest.py  test_answerer.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_eval.py  test_indexer.py  test_loader.py  test_mcp_server.py  test_reranker.py  test_retriever.py  test_rrf.py  test_status.py  test_store.py
tests/fixtures/vault/: empty.md  entità note.md  note-a.md
