[project]
name = "sparcos-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "ollama>=0.3",
  "anthropic>=0.40",
  "click>=8.1",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "mcp[cli]>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sparcos-rag = "sparcos_rag.cli:cli"
sparcos-rag-mcp = "sparcos_rag.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["sparcos_rag*"]
